Fixing stopPropagation() on mobile nav. Now properly looping over all nodes.

--- a/assets/css/1-tools/_vars.sass
+++ b/assets/css/1-tools/_vars.sass
@@ -7,7 +7,7 @@ $box-shadow-secondary: darken($box-shadow-primary, 10%)
 
 
 // Fonts
-$body-text: 'Open Sans', georgia, sans-serif
+$body-text: 'Open Sans', sans-serif
 $body-text-letter-spacing: inherit
 
 $title-text: 'cubanoregular'
